--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "facebook/webdriver": "dev-master"
+        "facebook/webdriver": "dev-master",
+        "ext-curl": "*"
     }
 }
