--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "require": {
-        "facebook/webdriver": "dev-master",
-        "ext-curl": "*"
+        "php": ">=5.1",
+        "ext-curl": "*",
+        "ext-dom": "*",
+        "ext-http": ">=0.23"
     }
 }
